@@ -20,6 +20,7 @@ For 5.3
     TODO: AuthorizationExecuteWithPrivileges() used by admin privileged exec, is deprecated in 10.8 Mountain Lion. New method involves using a helper tool. Take a look at Apple's horrible security API
     TODO: Use pseudo-ttys for line buffered output: http://stackoverflow.com/questions/12586555/controlling-an-interactive-command-line-utility-from-a-cocoa-app-trouble-with  --- Look at PseudoTTY class
     TODO: Find a way to fix broken file watching of script path eftir pressing "New"
+    TODO: Create automated tests for command line tool using PlistBuddy etc.
 
 5.2
     TODO: Test all examples and make sure they work correctly
@@ -30,9 +31,9 @@ For 5.3
     * New syntax to create submenus in Status Menu interface type
     * Relative paths are now supported in Platypus Profiles, but only through manual editing. Platypus app and CLT still generate Profiles with absolute paths.
     * Platypus now warns about about identical file names in bundled files
-    * Text in Platypus apps now has a minimum font size
     * Droplet apps now quit when their window is closed
-    * Updated and improved example profiles
+    * Updated and improved example profiles demonstrating new features
+    * Text in Platypus apps now has a minimum font size
     * The Platypus Profile format has changed slightly in this version, but old formats can still be read
     * Fixed annoying issue where status menu would render before receiving all script output
     * Fixed performance issue with printing many lines to text window. It is now very fast again.
